# train_feedback_grape

./: .gitignore  README.md  pyproject.toml
server/: basic_optimization_test.py  bspline_bundle_fock1_fid_9938_Tns_1488_20260113_19_23.npz  bspline_feedback_grape.py  bspline_fock_state_bayesian_optimization.py  fatal_crash.txt  pi_pulse_optimization.py  reset_3wave_optimization.py  snap_optimization.py  snap_optimization_parametrization.py  train_ppo.py
train_feedback_grape/: configuration.json  feedback_grape_dynamiqs_lossy_readout_control.ipynb  feedback_grape_quantum_memory_simulation.ipynb  feedback_grape_training_float64.ipynb  liouv_relax_demo.ipynb  nn_training.ipynb  nn_training_2kerrs.ipynb  nn_training_double_kerr.ipynb  train_nn.ipynb  train_nn_compact.ipynb  train_nn_double_check_convention.ipynb  train_nn_relax_control_dephasin_and_self_kerr_no_rot.ipynb  train_nn_with_calibrated_readout_decay_channels_and_self_kerr_small_nn.ipynb  train_nn_with_calibrated_readout_rotation_and_self_kerr.ipynb  train_nn_with_calibrated_readout_rotation_and_self_kerr_and_readout_dephasing.ipynb  train_nn_with_modeled_readout_rotation.ipynb  train_nn_with_more_accurate_readout.ipynb  train_nn_with_no_rotation_but_dephasing_and_self_kerr_during_idle.ipynb
train_feedback_grape/older_unused_notebooks/: feedback_grape_liouvillian_readout_updated.ipynb  feedback_grape_literal_training_model_check.ipynb  feedback_grape_quantum_memory_simulation.ipynb  feedback_grape_training_float64.ipynb  nn_training.ipynb  quantum_memory_v3.ipynb  quantum_memory_v4.ipynb  quantum_memory_v5.ipynb  (+7 more)
(+307 files in other folders)
