[project]
name = "train-feedback-grape"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.7",
    "ipykernel>=7.3.0",
    "jax>=0.10.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "optax>=0.2.8",
    "tqdm>=4.68.2",
]
